--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,7 +15,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.5.5",
